XinBox Version 0.99.3 Change Log:

Updated: Inbox Menu/Email Handling - hopefully will stop Inbox freezing bug.